--- a/iOS_messenger/Info.plist
+++ b/iOS_messenger/Info.plist
@@ -23,7 +23,30 @@
 	</dict>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Please allow access to take a profile picture</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Please allow access to select a photo for your profile</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Please allow access to select a photo for your profile</string>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb958954171807052</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>958954171807052</string>
+    <key>FacebookClientToken</key>
+    <string>ff5eb990f97c6ed106200fe23dd06cbc</string>
+    <key>FacebookDisplayName</key>
+    <string>My_Messenger</string>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fb-messenger-share-api</string>
+    </array>
+    
 </dict>
 </plist>
